<resources>
    <string name="app_name">To-Do</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task">Add Task</string>
    <string name="update_task">Update Task</string>
    <string name="pick_importance">Pick Importance *</string>
    <string name="important">Important</string>
    <string name="normal">Normal</string>
    <string name="not_important">Not Important</string>
    <string name="enter_task">Enter Task</string>
    <string name="select_importance">Select Importance</string>
    <string name="task_added">Task Added</string>
    <string name="task_updated">Task Updated</string>
    <string name="codewithrish">CodeWithRish</string>
</resources>